Add header to notebook for model designing

--- a/lab/analysis/02-explore-classifier-model.ipynb
+++ b/lab/analysis/02-explore-classifier-model.ipynb
@@ -5,7 +5,15 @@
    "id": "456c039a",
    "metadata": {},
    "source": [
-    "# Classifier model exploration"
+    "# Preliminary model for classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c2f0d3",
+   "metadata": {},
+   "source": [
+    "This notebook aims to develop a preliminary version of a classifier for the challenge."
    ]
   },
   {
